--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body,
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-rose-900 rounded-xl;
+  @apply bg-purple-800 rounded-xl;
 }
 
 .task > ::-webkit-scrollbar-thumb {
